--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <module>java-8-collections</module>
     <module>java-8-executors</module>
     <module>java-8-certification</module>
+    <module>booking.com</module>
   </modules>
 
   <properties>
